// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendButton should render and match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SendButton
    buttonState="idle"
    disabled={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <span>
        <ButtonIcon__ButtonIcon
                name="paper-plane"
        />
        <span>
                <FormattedMessage
                        defaultMessage="Send"
                        id="portfolio.components.SendButton.idle"
                        values={Object {}}
                />
        </span>
</span>,
      "disabled": true,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ButtonIcon__ButtonIcon
            name="paper-plane"
/>,
          <span>
            <FormattedMessage
                        defaultMessage="Send"
                        id="portfolio.components.SendButton.idle"
                        values={Object {}}
            />
</span>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "name": "paper-plane",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Send"
              id="portfolio.components.SendButton.idle"
              values={Object {}}
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Send",
              "id": "portfolio.components.SendButton.idle",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
      ],
      "type": "span",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <span>
          <ButtonIcon__ButtonIcon
                    name="paper-plane"
          />
          <span>
                    <FormattedMessage
                              defaultMessage="Send"
                              id="portfolio.components.SendButton.idle"
                              values={Object {}}
                    />
          </span>
</span>,
        "disabled": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ButtonIcon__ButtonIcon
              name="paper-plane"
/>,
            <span>
              <FormattedMessage
                            defaultMessage="Send"
                            id="portfolio.components.SendButton.idle"
                            values={Object {}}
              />
</span>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "paper-plane",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="Send"
                id="portfolio.components.SendButton.idle"
                values={Object {}}
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Send",
                "id": "portfolio.components.SendButton.idle",
                "values": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "span",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SendButton should respond when set to \`enabled\` 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SendButton
    buttonState="idle"
    disabled={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <span>
        <ButtonIcon__ButtonIcon
                name="paper-plane"
        />
        <span>
                <FormattedMessage
                        defaultMessage="Send"
                        id="portfolio.components.SendButton.idle"
                        values={Object {}}
                />
        </span>
</span>,
      "disabled": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ButtonIcon__ButtonIcon
            name="paper-plane"
/>,
          <span>
            <FormattedMessage
                        defaultMessage="Send"
                        id="portfolio.components.SendButton.idle"
                        values={Object {}}
            />
</span>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "name": "paper-plane",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Send"
              id="portfolio.components.SendButton.idle"
              values={Object {}}
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Send",
              "id": "portfolio.components.SendButton.idle",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
      ],
      "type": "span",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <span>
          <ButtonIcon__ButtonIcon
                    name="paper-plane"
          />
          <span>
                    <FormattedMessage
                              defaultMessage="Send"
                              id="portfolio.components.SendButton.idle"
                              values={Object {}}
                    />
          </span>
</span>,
        "disabled": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ButtonIcon__ButtonIcon
              name="paper-plane"
/>,
            <span>
              <FormattedMessage
                            defaultMessage="Send"
                            id="portfolio.components.SendButton.idle"
                            values={Object {}}
              />
</span>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "paper-plane",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="Send"
                id="portfolio.components.SendButton.idle"
                values={Object {}}
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Send",
                "id": "portfolio.components.SendButton.idle",
                "values": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "span",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SendButton when the \`state\` changes should change its appearance when state is \`error\` 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SendButton
    buttonState="error"
    disabled={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <span>
        <ButtonIcon__ButtonIcon
                name="paper-plane"
        />
        <span>
                <FormattedMessage
                        defaultMessage="Failed. Please try again"
                        id="portfolio.components.SendButton.error"
                        values={Object {}}
                />
        </span>
</span>,
      "disabled": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ButtonIcon__ButtonIcon
            name="paper-plane"
/>,
          <span>
            <FormattedMessage
                        defaultMessage="Failed. Please try again"
                        id="portfolio.components.SendButton.error"
                        values={Object {}}
            />
</span>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "name": "paper-plane",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Failed. Please try again"
              id="portfolio.components.SendButton.error"
              values={Object {}}
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Failed. Please try again",
              "id": "portfolio.components.SendButton.error",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
      ],
      "type": "span",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <span>
          <ButtonIcon__ButtonIcon
                    name="paper-plane"
          />
          <span>
                    <FormattedMessage
                              defaultMessage="Failed. Please try again"
                              id="portfolio.components.SendButton.error"
                              values={Object {}}
                    />
          </span>
</span>,
        "disabled": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ButtonIcon__ButtonIcon
              name="paper-plane"
/>,
            <span>
              <FormattedMessage
                            defaultMessage="Failed. Please try again"
                            id="portfolio.components.SendButton.error"
                            values={Object {}}
              />
</span>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "paper-plane",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="Failed. Please try again"
                id="portfolio.components.SendButton.error"
                values={Object {}}
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Failed. Please try again",
                "id": "portfolio.components.SendButton.error",
                "values": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "span",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SendButton when the \`state\` changes should change its appearance when state is \`sending\` 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SendButton
    buttonState="sending"
    disabled={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <span>
        <ButtonIcon__ButtonIcon
                name="paper-plane"
        />
        <span>
                <FormattedMessage
                        defaultMessage="Sending..."
                        id="portfolio.components.SendButton.sending"
                        values={Object {}}
                />
        </span>
</span>,
      "disabled": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ButtonIcon__ButtonIcon
            name="paper-plane"
/>,
          <span>
            <FormattedMessage
                        defaultMessage="Sending..."
                        id="portfolio.components.SendButton.sending"
                        values={Object {}}
            />
</span>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "name": "paper-plane",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Sending..."
              id="portfolio.components.SendButton.sending"
              values={Object {}}
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Sending...",
              "id": "portfolio.components.SendButton.sending",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
      ],
      "type": "span",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <span>
          <ButtonIcon__ButtonIcon
                    name="paper-plane"
          />
          <span>
                    <FormattedMessage
                              defaultMessage="Sending..."
                              id="portfolio.components.SendButton.sending"
                              values={Object {}}
                    />
          </span>
</span>,
        "disabled": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ButtonIcon__ButtonIcon
              name="paper-plane"
/>,
            <span>
              <FormattedMessage
                            defaultMessage="Sending..."
                            id="portfolio.components.SendButton.sending"
                            values={Object {}}
              />
</span>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "paper-plane",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="Sending..."
                id="portfolio.components.SendButton.sending"
                values={Object {}}
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Sending...",
                "id": "portfolio.components.SendButton.sending",
                "values": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "span",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SendButton when the \`state\` changes should change its appearance when state is \`success\` 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SendButton
    buttonState="success"
    disabled={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <span>
        <ButtonIcon__ButtonIcon
                name="paper-plane"
        />
        <span>
                <FormattedMessage
                        defaultMessage="Sent! I'll respond as soon as possible"
                        id="portfolio.components.SendButton.success"
                        values={Object {}}
                />
        </span>
</span>,
      "disabled": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ButtonIcon__ButtonIcon
            name="paper-plane"
/>,
          <span>
            <FormattedMessage
                        defaultMessage="Sent! I'll respond as soon as possible"
                        id="portfolio.components.SendButton.success"
                        values={Object {}}
            />
</span>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "name": "paper-plane",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Sent! I'll respond as soon as possible"
              id="portfolio.components.SendButton.success"
              values={Object {}}
/>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Sent! I'll respond as soon as possible",
              "id": "portfolio.components.SendButton.success",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
      ],
      "type": "span",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <span>
          <ButtonIcon__ButtonIcon
                    name="paper-plane"
          />
          <span>
                    <FormattedMessage
                              defaultMessage="Sent! I'll respond as soon as possible"
                              id="portfolio.components.SendButton.success"
                              values={Object {}}
                    />
          </span>
</span>,
        "disabled": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ButtonIcon__ButtonIcon
              name="paper-plane"
/>,
            <span>
              <FormattedMessage
                            defaultMessage="Sent! I'll respond as soon as possible"
                            id="portfolio.components.SendButton.success"
                            values={Object {}}
              />
</span>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "paper-plane",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="Sent! I'll respond as soon as possible"
                id="portfolio.components.SendButton.success"
                values={Object {}}
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Sent! I'll respond as soon as possible",
                "id": "portfolio.components.SendButton.success",
                "values": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "span",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
